--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <meta charset="utf-8">
         <meta description="SocialTechはEdTech業界のリーディングカンパニーを目指します。">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="twitter:card" content="summary"/>
+        <meta name="twitter:card" content="summary_large_image"/>
         <meta name="twitter:site" content="@miyukin27"/>
         <meta property="og:url" content-"https://miyukin27.github.io/socialtech_2/"/>
         <meta property="og:title" content="SocialTech"/>
         <meta property="og:description" content="SocialTechはEdTech業界のリーディングカンパニーを目指します。"/>
-        <meta property="og:image" content="https://miyukin27.github.io/socialtech_2/TOP.png"/>
+        <meta property="og:image" content="https://miyukin27.github.io/socialtech_2/index/index-main.png"/>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
